--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stlyle.css" />
-    <title>Portifólio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Portfólio</title>
 
 </head>
 
 <body>
-
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="/img/fundo.jpg" alt="background">
+            </div>
+            <div class="banner">
+                <h1>Web Developer & Front End Designer</h1>
+                <p>Rubens Silva Lemos</p>
+                <button>Saiba Mais</button>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
