--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button>Saiba Mais</button>
             </div>
         </header>
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -47,7 +47,82 @@
                 <a href="#"><i class="fab fa-discord"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
-        </div>
+        </aside>
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia.
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia.
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia.
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia.
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
+                            quia.
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="/img/conhecimentos.png" alt="Conhecimento">
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
