--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
@@ -120,6 +120,46 @@
                 </div>
                 <div class="conhecimentos-img-wrapper">
                     <img src="/img/conhecimentos.png" alt="Conhecimento">
+                </div>
+            </div>
+        </section>
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="/img/proj1.jpg" alt="Imagem Projeto To Do">
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo list</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod recusandae a quas molestiae consequatur veritatis? Eius et rerum laboriosam accusamus, necessitatibus facere ullam quas sit laborum consequuntur est. Accusantium, praesentium?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="/img/proj2.jpg" alt="imagem projeto maratona">
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod recusandae a quas molestiae consequatur veritatis? Eius et rerum laboriosam accusamus, necessitatibus facere ullam quas sit laborum consequuntur est. Accusantium, praesentium?.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="/img/proj3.jpg" alt="Imagem do projeto A fazer">
+                    </div>
+                    <div class="card-info">
+                        <h2>Orçamento</h2>
+                        <h3>HTML, CSS, Javascript</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod recusandae a quas molestiae consequatur veritatis? Eius et rerum laboriosam accusamus, necessitatibus facere ullam quas sit laborum consequuntur est. Accusantium, praesentium?</p>
+                        <button>Saiba Mais</button>
+                    </div>
                 </div>
             </div>
         </section>
