--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script src="https://kit.fontawesome.com/72b6778518.js" crossorigin="anonymous"></script>
     <title>Portfólio</title>
 
 </head>
@@ -76,8 +77,8 @@
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fas fa-pencil-alt"></i>
-                        <h3>Design</h3>
+                        <i class="fa fa-laptop" aria-hidden="true"></i>
+                        <h3>Manutenção de PCs</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
@@ -98,8 +99,8 @@
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fab fa-bootstrap"></i>
-                        <h3>Bootstrap</h3>
+                        <i class="fab fa-java"></i>
+                        <h3>Java</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
