mudança no conteúdo do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <script src="https://kit.fontawesome.com/72b6778518.js" crossorigin="anonymous"></script>
-    <title>Portfólio</title>
+    <title>Rumos Soluções em T.I.</title>
 
 </head>
 
@@ -60,8 +60,8 @@
                         <h3>HTML</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia </p>
+                        <p>HTML5 é uma linguagem de marcação para a World Wide Web e é uma tecnologia chave da Internet, originalmente proposto por Opera Software. É a quinta versão da linguagem HTML. Esta nova versão traz consigo importantes mudanças quanto
+                            ao papel do HTML no mundo da Web, através de novas funcionalidades como semântica e acessibilidade. </p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -70,8 +70,8 @@
                         <h3>CSS</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia.
+                        <p>CSS3 é a terceira mais nova versão das famosas Cascading Style Sheets, onde se define estilos para seu projeto web.Com efeitos de transição, imagem,imagem de fundo/Background e outros, que dão um estilo novo e elegante a seus projetos
+                            web. Ou em todos os aspectos de design do layout da página.
                         </p>
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                         <h3>Manutenção de PCs</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia.
+                        <p>Fazemos diversos serviços de manutenção de computadores, como limpeza, troca e instalação de componentes, instalação de programas e apps, formatação, implementação de redes, remoção de virus, entre outros, bastando nos contactar
+                            através da sessão contato deste site, ou em nossas redes sociais.
                         </p>
                     </div>
                 </div>
@@ -92,8 +92,8 @@
                         <h3>Javascript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia.
+                        <p>Javascript é uma linguagem de programação de alta complexidade, mas de fácil uso, voltada para criar elementos em aplicações web, como sites, aplicativos e sistemas online. O mercado tem cada vez mais se direcionado para web, o
+                            que ressalta o quanto a JavaScript ganhou papel de protagonismo.
                         </p>
                     </div>
                 </div>
@@ -103,8 +103,7 @@
                         <h3>Java</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia.
+                        <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle Corporation.
                         </p>
                     </div>
                 </div>
@@ -114,8 +113,8 @@
                         <h3>Git e GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis inventore quas similique quae molestias assumenda. Totam, maiores quia! Atque voluptas harum blanditiis beatae vitae. Voluptatem esse temporibus labore cupiditate
-                            quia.
+                        <p>Git é um sistema de controle de versão desenvolvido por Linus Torvalds (o criador do Linux).GitHub, a maior rede social para desenvolvedores do mundo, é um serviço baseado em nuvem que hospeda o Git. Permitindo a desenvolvedores
+                            colaborarem fazendo mudanças em projetos compartilhados enquanto mantêm um registro detalhado do seu progresso.
                         </p>
                     </div>
                 </div>
@@ -135,11 +134,9 @@
                         <p>Sexo:</p><input type="text">
                         <p>CPF:</p><input type="text">
                         <p>Nascimento:</p><input type="date">
-                        <!-- <p>Cidade:</p><input type="text"></div>
-                    <div> -->
-                        <p>Estado:</p><input type="text">
-                        <p>Endereço:</p><input type="text">
-                        <p>CEP:</p><input type="text">
+                        <p>Endereço Completo:</p><input type="text">
+                        <input type="text">
+                        <input type="text">
                         <p>Senha:</p><input type="password">
                         <p>Confirmar Senha:</p><input type="password">
                     </div>
