--- a/index.html
+++ b/index.html
@@ -128,17 +128,21 @@
                 <img src="/img/RumosEmPe.png" alt="Cadastro de Clientes">
                 <form action="#">
                     <h1>Cadastro de Clientes</h1>
-                    <div>
-                        <p>Nome:</p><input type="text">
-                        <p>Telefone:</p><input type="text">
-                        <p>Sexo:</p><input type="text">
-                        <p>CPF:</p><input type="text">
-                        <p>Nascimento:</p><input type="date">
-                        <p>Endereço Completo:</p><input type="text">
-                        <input type="text">
-                        <input type="text">
-                        <p>Senha:</p><input type="password">
-                        <p>Confirmar Senha:</p><input type="password">
+                    <div class="endereco">
+                        <input type="text" placeholder="Nome:">
+                        <input type="text" placeholder="E-mail">
+                        <input type="text" placeholder="Telefone:">
+                        <input type="text" placeholder="Sexo:">
+                        <input type="text" placeholder="CPF:">
+                        <input type="date" placeholder="Nascimento:">
+                        <input type="text" placeholder="Endereço:">
+                        <div>
+                            <input type="text" placeholder="Cidade:">
+                            <input type="text" placeholder="Estado:">
+                            <input type="text" placeholder="Cep:">
+                        </div>
+                        <input type="password" placeholder="Senha:">
+                        <input type="password" placeholder="Confirmar Senha">
                     </div>
                     <div>
                         <button class="btn btn-cli">Novo</button>
@@ -188,12 +192,12 @@
                 <form action="#">
                     <h1>Orçamentos</h1>
                     <div>
-                        <p>Peça:</p><input type="text">
-                        <p>Preço de Compra:</p><input type="text">
-                        <p>Quantidade:</p><input type="text">
-                        <p>Margem de Lucro:</p><input type="text">
-                        <p>Mao de Obra:</p><input type="text">
-                        <p>Serviços:</p><input type="text">
+                        <input type="text" placeholder="Peça:">
+                        <input type="text" placeholder="Preço de Compra:">
+                        <input type="text" placeholder="Quantidade:">
+                        <input type="text" placeholder="Margem de Lucro:">
+                        <input type="text" placeholder="Mão de Obra:">
+                        <input type="text" placeholder="Serviços:">
                     </div>
                     <div>
                         <button class="btn">Novo Orçamento</button>
