--- a/index.html
+++ b/index.html
@@ -128,23 +128,21 @@
                 <img src="/img/RumosEmPe.png" alt="Cadastro de Clientes">
                 <form action="#">
                     <h1>Cadastro de Clientes</h1>
-                    <div class="endereco">
+                    <div>
                         <input type="text" placeholder="Nome:">
-                        <input type="text" placeholder="E-mail">
+                        <input type="text" placeholder="E-mail:">
                         <input type="text" placeholder="Telefone:">
                         <input type="text" placeholder="Sexo:">
                         <input type="text" placeholder="CPF:">
-                        <input type="date" placeholder="Nascimento:">
+                        <input type="text" placeholder="Cidade:">
+                        <input type="text" placeholder="Estado:">
                         <input type="text" placeholder="Endereço:">
-                        <div>
-                            <input type="text" placeholder="Cidade:">
-                            <input type="text" placeholder="Estado:">
-                            <input type="text" placeholder="Cep:">
-                        </div>
+                        <input type="text" placeholder="Cep:">
                         <input type="password" placeholder="Senha:">
-                        <input type="password" placeholder="Confirmar Senha">
+                        <input type="password" placeholder="Confirmar Senha:">
                     </div>
                     <div>
+                        <input type="date" placeholder="Nascimento:">
                         <button class="btn btn-cli">Novo</button>
                         <button class="btn btn-cli">Gravar</button>
                         <button class="btn btn-cli">Anterior</button>
@@ -200,11 +198,13 @@
                         <input type="text" placeholder="Serviços:">
                     </div>
                     <div>
+
                         <button class="btn">Novo Orçamento</button>
                         <button class="btn">Item Anterior</button>
                         <button class="btn">Item Posterior</button>
                         <button class="btn">Excluir Item</button>
-                        <button class="btn">Gravar Orçamento</button>
+                    </div>
+                    <div><button class="btn">Gravar Orçamento</button>
                         <button class="btn">Excluir Orçamento</button>
                         <button class="btn">Orçamento Cliente</button>
                         <button class="btn">Relatório do Orçamento</button>
