--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stlyle.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
@@ -203,8 +203,7 @@
                         <button class="btn">Item Anterior</button>
                         <button class="btn">Item Posterior</button>
                         <button class="btn">Excluir Item</button>
-                    </div>
-                    <div><button class="btn">Gravar Orçamento</button>
+                        <button class="btn">Gravar Orçamento</button>
                         <button class="btn">Excluir Orçamento</button>
                         <button class="btn">Orçamento Cliente</button>
                         <button class="btn">Relatório do Orçamento</button>
